[package]
name = "em_timeless"
version = "0.1.0"
edition = "2018"
cortex-m = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lm3s6965 = "0.1.3"
cortex-m-semihosting = "0.3.3"
cortex-m-rt = "0.6.15"
#cortex-m-rt = "0.7.0"
cortex-m = "0.7.3"

[dependencies.panic-semihosting]
features = ["exit"]
version = "0.5.2"

[dependencies.timeless]
path = "../timeless"


[profile.release]
codegen-units = 1
lto = true


[patch.crates-io]
lm3s6965 = { git = "https://github.com/japaric/lm3s6965" }